// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > matches snapshot (custom-class) 1`] = `
<div>
  <div
    class="rounded-2xl border border-white/10 bg-glass shadow-glass backdrop-blur-md light:border-app-border light:bg-glass-panel light:shadow-glass mt-2 w-full"
  >
    Content
  </div>
</div>
`;

exports[`Card > matches snapshot (danger) 1`] = `
<div>
  <div
    class="rounded-2xl border border-rose-400/28 bg-rose-500/10 light:border-app-danger-border light:bg-app-danger-bg light:text-app-danger-fg"
  >
    Content
  </div>
</div>
`;

exports[`Card > matches snapshot (glass-default) 1`] = `
<div>
  <div
    class="rounded-2xl border border-white/10 bg-glass shadow-glass backdrop-blur-md light:border-app-border light:bg-glass-panel light:shadow-glass"
  >
    Content
  </div>
</div>
`;

exports[`Card > matches snapshot (panel) 1`] = `
<div>
  <div
    class="rounded-2xl border border-white/8 bg-white/4 backdrop-blur-[20px] light:border-app-border-subtle light:bg-app-surface-subtle light:shadow-card-surface"
  >
    Content
  </div>
</div>
`;

exports[`Card > matches snapshot (soft) 1`] = `
<div>
  <div
    class="rounded-2xl border border-white/8 bg-white/6 light:border-app-border-subtle light:bg-app-surface-muted light:shadow-card-surface-soft"
  >
    Content
  </div>
</div>
`;

exports[`Card > matches snapshot (success) 1`] = `
<div>
  <div
    class="rounded-2xl border border-emerald-400/28 bg-emerald-500/10 light:border-app-success-border light:bg-app-success-bg light:text-app-success-fg"
  >
    Content
  </div>
</div>
`;

exports[`Card > matches snapshot with header and content 1`] = `
<div>
  <div
    class="rounded-2xl border border-white/8 bg-white/4 backdrop-blur-[20px] light:border-app-border-subtle light:bg-app-surface-subtle light:shadow-card-surface"
  >
    <div
      class="border-b border-white/8 px-4 py-3 light:border-app-border-subtle"
    >
      Title
    </div>
    <div
      class="px-4 py-3"
    >
      Body
    </div>
  </div>
</div>
`;
